@@ -1,0 +1,11 @@
+title: Stulz clima unit alerts
+agents: snmp
+catalog: hw/environment
+license: GPL
+distribution: check_mk
+description:
+ This plugin checks all connected clima units on a stulz management for an alert state.
+ If the state not equal to zero, {CRIT} will be returned. No configuration is needed.
+
+inventory:
+ The inventory will create one service per device.
