@@ -1,0 +1,11 @@
+title: Stulz clima unit power state
+agents: snmp
+catalog: hw/environment
+license: GPL
+distribution: check_mk
+description:
+ This plugin shows the power state (on/off) of all connected clima units on a stulz management.
+ The check is only informatial an returns always {OK}
+
+inventory:
+ The inventory will create one service per device.
