@@ -1,0 +1,17 @@
+title: Stulz clima unit alerts
+agents: snmp
+catalog: hw/environment
+license: GPL
+distribution: check_mk
+description:
+ This plugin polls the air temperature of all connected clima units on a stulz management.
+ It is possible to define levels for warning and critical temperature. The plugin return
+ {CRIT} or {WARN} if the current temperatue is higher then one of the levels.
+
+
+inventory:
+ The inventory will create one service per device.
+
+[parameters]
+warn(int): Warning level for the temperature. 
+crit(int): Critical level for the temperature.
