@@ -1,0 +1,56 @@
+#!/usr/bin/python
+# -*- encoding: utf-8; py-indent-offset: 4 -*-
+# +------------------------------------------------------------------+
+# |             ____ _               _        __  __ _  __           |
+# |            / ___| |__   ___  ___| | __   |  \/  | |/ /           |
+# |           | |   | '_ \ / _ \/ __| |/ /   | |\/| | ' /            |
+# |           | |___| | | |  __/ (__|   <    | |  | | . \            |
+# |            \____|_| |_|\___|\___|_|\_\___|_|  |_|_|\_\           |
+# |                                                                  |
+# | Copyright Mathias Kettner 2013             mk@mathias-kettner.de |
+# +------------------------------------------------------------------+
+#
+# This file is part of Check_MK.
+# The official homepage is at http://mathias-kettner.de/check_mk.
+#
+# check_mk is free software;  you can redistribute it and/or modify it
+# under the  terms of the  GNU General Public License  as published by
+# the Free Software Foundation in version 2.  check_mk is  distributed
+# in the hope that it will be useful, but WITHOUT ANY WARRANTY;  with-
+# out even the implied warranty of  MERCHANTABILITY  or  FITNESS FOR A
+# PARTICULAR PURPOSE. See the  GNU General Public License for more de-
+# ails.  You should have  received  a copy of the  GNU  General Public
+# License along with GNU Make; see the file  COPYING.  If  not,  write
+# to the Free Software Foundation, Inc., 51 Franklin St,  Fifth Floor,
+# Boston, MA 02110-1301 USA.
+
+stulz_temp_default_levels = ( 25, 28 )
+
+def inventory_stulz_temp(info):
+    return [ (x[0], "stulz_temp_default_levels" ) for x in info ]
+
+def check_stulz_temp(item, params, info):
+    for line in info:
+        if line[0] == item:
+            warn, crit = params
+            temp = saveint(line[1])/10
+            state = 0
+            if temp >= crit:
+                state = 2
+            elif temp >= warn:
+                state = 1
+            message = " Current Temperature: %d°C" % temp
+            perf = [ ('temp', temp, warn, crit ) ]
+            return state, message, perf
+    return 3, "No information found about the device"
+
+check_info["stulz_temp"] = {
+    "check_function"        : check_stulz_temp,
+    "inventory_function"    : inventory_stulz_temp,
+    "service_description"   : "Temperature %s ",
+    "has_perfdata"          : True,
+    "group"                 : "room_temperature",
+    "snmp_scan_function"    : lambda oid: oid(".1.3.6.1.2.1.1.2.0") == ".1.3.6.1.4.1.29462.10",
+    "snmp_info"             : ( ".1.3.6.1.4.1.29462.10.2.1.1.1.1.1.1.1.1192", [ OID_END, 1] ),
+}
+
