@@ -10,6 +10,7 @@
     * 0106 3ware_units: The verifying state is now handled as ok...
     * 0086 timemachine: new check checking the age of latest backup by timemachine on MAC OS
     * 0074 raritan_pdu_plugs: new check for Raritan PX-2000 family PDUs...
+    * 0107 stulz_alerts, stulz_powerstate, stulz_temp, stulz_humidity: New Checks for Stulz clima devices
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
